@@ -55,6 +55,9 @@
 /* True if long double supported.  */
 #undef  _HAVE_LONG_DOUBLE
 
+/* Define if compiler supports -fno-tree-loop-distribute-patterns. */
+#undef  _HAVE_CC_INHIBIT_LOOP_TO_LIBCALL
+
 /* True if long double supported and it is equal to double.  */
 #undef  _LDBL_EQ_DBL
  
